--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.52.1"
+    "sass": "^1.52.1",
+    "swiper": "^6.4.8"
   },
   "devDependencies": {
     "eslint": "8.15.0",
