--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
+    "formik": "^2.2.9",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sass": "^1.52.1",
-    "swiper": "^6.4.8"
+    "swiper": "^6.4.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.15.0",
