--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.6.4",
+    "axios": "^1.2.0",
     "formik": "^2.2.9",
+    "mongoose": "^6.7.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-toastify": "^9.1.1",
     "sass": "^1.52.1",
     "swiper": "^6.4.8",
     "yup": "^0.32.11"
